# persistent-vector

./: .gitignore  .travis.yml  ChangeLog.md  README.md  persistent-vector.cabal
.github/workflows/: ci-matrix.yml  haskell-ci.yml  haskell.yml
bench/: pvBench.hs
src/Data/Vector/: Persistent.hs
src/Data/Vector/Persistent/: Array.hs  Level.hs  Unsafe.hs
src/Data/Vector/Persistent/Level/: Unsafe.hs
tests/: pvTests.hs
